Fixed svg clippath bug that didnt work on firefox and safari + Connected the frontend to the backend(API) + Small changes on styling added :zap:

--- a/src/app/search-results/search-results.component.css
+++ b/src/app/search-results/search-results.component.css
@@ -140,7 +140,7 @@ select:-webkit-autofill:focus {
   border: none;
   outline: none;
   -webkit-text-fill-color: none;
-  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+  -webkit-box-shadow: inset 1px 1px 4px grey;
   transition: background-color 5000s ease-in-out 0s;
 }
 
