--- a/src/app/user-assets/sign-in/sign-in.component.css
+++ b/src/app/user-assets/sign-in/sign-in.component.css
@@ -37,7 +37,7 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   border: 1px solid transparent;
   -webkit-text-fill-color: none;
-  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+  -webkit-box-shadow: inset 1px 1px 4px grey;
   transition: background-color 5000s ease-in-out 0s;
 }
 
